# Task_Prioritization-Api

./: README.md  main.py  model1.ipynb  pyproject.toml
api/: api example.json  api.py
data/: Task_Prioritization_Dataset.csv
weights/: Completion_Status  Task_Type  model
